# OrchardProbe

./: .gitattributes  .gitignore  ACCEPTABLE_USE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXECUTION_PLAN.md  LEGAL.md  LICENSE  PROJECT_PLAN.md  README.md  README.zh-CN.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  compatibility.yml  config.yml  docs.yml  feature.yml
.github/workflows/: demolab.yml  repository-quality.yml  rust.yml
crates/orchardprobe-cli/: Cargo.toml
crates/orchardprobe-cli/src/: main.rs
crates/orchardprobe-cli/tests/: cli.rs
crates/orchardprobe-core/: Cargo.toml
crates/orchardprobe-core/src/: ipa.rs  ipa_app.rs  ipa_bundle.rs  ipa_catalog.rs  ipa_code.rs  ipa_manifest.rs  ipa_materialize.rs  ipa_package.rs  lib.rs  macho.rs  wire.rs
crates/orchardprobe-core/tests/: schema_contracts.rs
docs/: README.md  technical-overview.md  user-guide.md
docs/architecture/: ADR-0001-rust-host.md  RFC-0001-scope-and-threat-model.md  RFC-0002-bounded-host-helper-protocol.md
docs/compatibility/: README.md  test-record-template.md
docs/development/: demolab.md  getting-started.md  ipa-code-inventory.md  ipa-deterministic-package.md  ipa-info-plist.md  ipa-main-executable.md  ipa-nested-bundles.md  ipa-package-manifest.md  ipa-preflight.md  ipa-private-worktree.md  macho-inspect.md  schemas.md
docs/zh-CN/: README.md  execution-plan.md  technical-overview.md  user-guide.md
fixtures/DemoLab/: README.md  project.yml
fixtures/DemoLab/App/: Info.plist
fixtures/DemoLab/App/Sources/: DemoLabApp.swift
fixtures/DemoLab/Framework/Headers/: DLDemoMessage.h  DemoFramework.h
fixtures/DemoLab/Framework/Sources/: DLDemoMessage.m
fixtures/DemoLab/ShareExtension/: Info.plist
fixtures/DemoLab/ShareExtension/Sources/: ShareViewController.swift
schemas/: fixture-expectation.schema.json
schemas/v0/: capability-v1.schema.json  error-v1.schema.json  export-manifest-v2.schema.json  export-manifest-v3.schema.json
schemas/v0/examples/invalid/: capability.oversized-collection.invalid.expected.json  capability.oversized-collection.invalid.json  capability.unknown-field.invalid.expected.json  capability.unknown-field.invalid.json  capability.unknown-version.invalid.expected.json  capability.unknown-version.invalid.json  error.malformed-range.invalid.expected.json  error.malformed-range.invalid.json  error.unknown-code.invalid.expected.json  error.unknown-code.invalid.json  export-manifest.inconsistent-signature.invalid.expected.json  export-manifest.inconsistent-signature.invalid.json  export-manifest.legacy-version.invalid.expected.json  export-manifest.legacy-version.invalid.json  export-manifest.malformed-range.invalid.expected.json  export-manifest.malformed-range.invalid.json  export-manifest.partial-package.invalid.expected.json  export-manifest.partial-package.invalid.json  export-manifest.pass-without-oracle.invalid.expected.json  export-manifest.pass-without-oracle.invalid.json  export-manifest.unsafe-path.invalid.expected.json  export-manifest.unsafe-path.invalid.json
(+4 files in other folders)
