[workspace]
members = [
  "crates/orchardprobe-cli",
  "crates/orchardprobe-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/jacklv-coder/OrchardProbe"
publish = false

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.188"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
