[workspace]
members = [
  "crates/orchardprobe-cli",
  "crates/orchardprobe-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/jacklv-coder/OrchardProbe"
publish = false

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.188"
jsonschema = { version = "0.48.2", default-features = false }
plist = { version = "=1.8.0", default-features = false, features = ["enable_unstable_features_that_may_break_with_minor_version_bumps"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustix = { version = "=1.1.4", features = ["fs"] }
tempfile = "=3.27.0"
thiserror = "2.0"
zip = { version = "=5.1.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[workspace.lints.rust]
unsafe_code = "forbid"
