[package]
name = "orchardprobe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Safe pre-alpha command-line interface for OrchardProbe"

[[bin]]
name = "oprobe"
path = "src/main.rs"

[dependencies]
clap.workspace = true
orchardprobe-core = { path = "../orchardprobe-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
