[package]
name = "orchardprobe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema.workspace = true
serde_json.workspace = true

[lints]
workspace = true
