[package]
name = "orchardprobe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
crc32fast.workspace = true
plist.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zip.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[dev-dependencies]
jsonschema.workspace = true
serde_json.workspace = true

[lints]
workspace = true
